--- a/adm/app/adms/assets/css/custom_adm.css
+++ b/adm/app/adms/assets/css/custom_adm.css
@@ -19,7 +19,7 @@
     --second-bg-color: #1e2746;
     --third-bg-color: #3a7afe;
     --fourth-bg-color: #000000;
-    --fifthy-bg-color: #0f0f0f;
+    --fifthy-bg-color: #0a0a0a;
     --primary-color: #0088cc;
     --success-color: #47a447;
     --info-color: #5bc0de;
@@ -30,6 +30,8 @@
     --info-color-second: #cff4fc;
     --warning-color-second: #fff3cd;
     --danger-color-second: #f8d7da;
+    --success-color-third: rgba(8, 179, 8, 0.705);
+    --success-color-fourth: rgba(7, 73, 7, 0.808);
 }
 
 body {
@@ -61,12 +63,14 @@ body {
 }
 
 .navbar .bars {
-    margin-right: 20px;
+    margin-right: 25px;
+    margin-left: 4px;
     cursor: pointer;
 }
 
 .logo {
     width: 50px;
+    margin-right: 25px;
 }
 
 
@@ -193,8 +197,7 @@ body {
     }
 }
 
-.content .sidebar:hover,
-.content .sidebar.active {
+.content .sidebar:hover {
     width: 250px;
 }
 
@@ -238,7 +241,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 22px;
+    font-size: 27px;
     flex-shrink: 0;
 }
 
@@ -352,15 +355,27 @@ body {
     padding: 10px;
 }
 
-.table-list .list-body .list-body-content {
+.table-list .list-body .list-body-content .list-row-content{
     background-color: var(--fourth-color);
     color: var(--fourth-bg-color);
     padding: 8px;
+    
 }
 
 .list-body-content-action{
     text-align: center;
     vertical-align: middle;
+    padding: 10px;
+}
+
+.list-row-content{
+    background-color: var(--fourth-color);
+    color: var(--fourth-bg-color);
+    transition: all .3s ease;
+}
+.list-row-content:hover{
+    background-color: var(--second-bg-color);
+    color: var(--fourth-color);
 }
 
 /* Inicio paginação */
@@ -568,6 +583,14 @@ select.input-adm{
     padding: 12px 7px;
 }
 
+.alert-success-second{
+    background-color: var(--success-color-third);
+    color: var(--success-color-fourth);
+    margin: 10px 0;
+    border-radius: 4px;
+    padding: 12px 7px;
+}
+
 .alert-warning{
     background-color: var(--warning-color-second);
     color: var(--warning-color);
@@ -632,3 +655,28 @@ select.input-search:focus{
 /* Fim Pesquisar*/
 
 /* Fim conteudo */
+
+/* Inicio Footer */
+
+footer {
+    padding: 40px 0;
+    color: white;
+    background: var(--fifthy-bg-color);
+  }
+  
+  footer li {
+    padding: 0 10px;
+    list-style: none;
+  }
+  
+  footer a {
+    color: white;
+  }
+  
+  footer p {
+    text-align: center;
+  }
+
+
+
+/* Final Footer */
